--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "rest-framework-simplejwt (>=0.0.2,<0.0.3)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
-    "django-cors-headers (>=4.9.0,<5.0.0)"
+    "django-cors-headers (>=4.9.0,<5.0.0)",
+    "requests (>=2.32.5,<3.0.0)",
+    "bs4 (>=0.0.2,<0.0.3)"
 ]
 
 
