--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
     "django-cors-headers (>=4.9.0,<5.0.0)",
     "requests (>=2.32.5,<3.0.0)",
-    "bs4 (>=0.0.2,<0.0.3)"
+    "bs4 (>=0.0.2,<0.0.3)",
+    "pillow (>=12.0.0,<13.0.0)"
 ]
 
 
